add instructions for map and of rxjs operators

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,40 @@
-/* You can add global styles to this file, and also import other style files */
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+#sidebar {
+    width: 270px;
+    padding:10px 0px;
+  }
+#main-content{
+    padding:10px 15px;
+}
+code{
+    background:#FFC0CB;
+    padding:3px
+}
+.mat-accordion{
+    .mat-expansion-panel{
+        &:last-of-type, &:first-of-type{
+            border-radius: 0!important;
+        }
+        .mat-expansion-panel-body{
+            padding:0;
+            .mat-expansion-panel{
+                padding:0;
+                .mat-expansion-panel-body{
+                    padding:0 30px 0 15px;
+                    .mat-expansion-panel-header{
+                        .mat-panel-title{
+                            padding: 0 15px;
+                        }
+                    }
+                }
+    
+            }
+        }
+    }
+}
+
+  .container {
+    width: 100%;
+    height: 100%;
+  }
